# jungfrau-photoncounter

./: .clang-format  CMakeLists.txt  Makefile  README.md  compile_cuda.sh  compile_omp.sh  parse_results.py  read_cores.py  rerun_cuda_20200120.sh  run.py  run_all.py  run_base.py  run_cores.sh  run_cuda.sh  run_cuda_base_1.sh  run_cuda_base_2.sh  run_cuda_base_4.sh  run_cuda_detailed_4.sh  run_cuda_multiple.sh  run_detailed.py  run_multiple_detectors.py  run_omp_base.sh  run_omp_detailed.sh  run_omp_multiple.sh  run_static.sh  run_woht_cores.sh  start_cuda.sh  start_omp.sh
Publication/: database.bib  manuscript.tex
bench_scripts/: check.sh  check_cpu.sh  check_gpu.sh  compile_cuda.sh  compile_omp.sh  cuda_clustercount.sh  cuda_clusters.sh  cuda_clustersizes.sh  cuda_dataset.sh  cuda_devframes.sh  cuda_energy.sh  cuda_maxval.sh  cuda_multidet.sh  cuda_photon.sh  cuda_run_jf.sh  cuda_sum.sh  omp_clustercount.sh  omp_clusters.sh  omp_clustersizes.sh  omp_dataset.sh  omp_devframes.sh  omp_energy.sh  omp_maxval.sh  omp_multidet.sh  omp_photon.sh  omp_run_jf.sh  omp_sum.sh
data_generator/: main.cpp
doc/: Jungfrau_Algo_Email.txt  Jungfrau_samples_tarfile.txt  description.md  flowchart.dia  hardware_diagram.odg  specs.md  usage.md
doc/benchmarks/: nvlink.md
doc/benchmarks/memory/: nvlink.md  pcie.md
doc/docs-v2/: detailed.md
doc/docs-v2/img/src/: energy_conversion.odg  gain_map_inversion.odg
evaluation_scripts/: clustercount.ipynb  jf.ipynb
evaluation_scripts/.ipynb_checkpoints/: clustercount-checkpoint.ipynb
include/: Filecache.hpp  bench.hpp  check.hpp  confgen.hpp
include/jungfrau-photoncounter/: AlpakaHelper.hpp  Alpakaconfig.hpp  CheapArray.hpp  Config.hpp  Debug.hpp  Dispenser.hpp  Filecache.hpp  Ringbuffer.hpp  deviceData.hpp
include/jungfrau-photoncounter/kernel/: Calibration.hpp  CheckRms.hpp  CheckStdDev.hpp  ClusterFinder.hpp  Conversion.hpp  DriftMap.hpp  ForEach.hpp  GainStageMasking.hpp  GainmapInversion.hpp  Iterator.hpp  MaxValue.hpp  MaxValueCopy.hpp  PhotonFinder.hpp  Reduction.hpp  ScaleStdDev.hpp  Summation.hpp  helpers.hpp
reference/slsDetectorPackage/slsDetectorCalibration/: multiThreadedAnalogDetector.h  singlePhotonDetector.h
scripts/: ascii_clust_to_bin.cpp  bin_clust_to_ascii.cpp  cluster_compare.cpp  cluster_compare.py  cluster_compare2.cpp  cluster_converter.cpp  cluster_overlap_extract.py  cluster_reader.py  gainCreator.cpp  gaincreator.py  gainreader.py  log_changes.cpp  test_data_generator.cpp  visu.py
src/: Alpakaconfig.hpp  Bitmap.cpp  Bitmap.hpp  Config.hpp  CudaHeader.cu  CudaHeader.hpp  Dispenser.cpp  Dispenser.hpp  Filecache.cpp  Filecache.cu  Filecache.hpp  Gainmap.h  Kernel.cu  Kernel.hpp  Pedestalmap.h  Pixelmap.h  Pixelmap.hpp  RingBuffer.hpp  Ringbuffer.hpp  Upload.cu  Upload.hpp  bench.cpp  benchMultiple.cpp  deviceData.hpp  main.cpp  main.cu
src/cuda/: CalculationKernel.cu  CalculationKernel.hpp  CalibrationKernel.cu  CalibrationKernel.hpp  SummationKernel.cu  SummationKernel.hpp  Upload.cu  Upload.hpp
src/kernel/: CalculationKernel.cu  CalculationKernel.hpp  Calibration.hpp  CalibrationKernel.cu  CalibrationKernel.hpp  ClusterFinder.hpp  Conversion.hpp  Correction.hpp  Detection.hpp  DriftMap.hpp  EnergyConversion.hpp  GainStageMasking.hpp  PhotonCounting.hpp  PhotonFinder.hpp  Settings.hpp  Statistics.hpp  Summation.hpp  SummationKernel.cu  SummationKernel.hpp  Zero.hpp  helpers.hpp
(+2 files in other folders)
